fix titlebarbutton going off screen in small screen spaces

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -52,14 +52,13 @@ body {
 .navButton {
   color: var(--buttonText);
   background-color: #ffffff00;
-  border-style: none;
   /* width: 128px; */
   padding-left: var(--defaultPadding);
   padding-right: var(--defaultPadding);
   margin-left: 10px;
   border-radius: var(--cornerSize);
   transition: 0.2s;
-
+  border-style: none;
 }
 
 .navButton:hover {
@@ -108,7 +107,7 @@ body {
 
 .titleBarButton {
   margin-top: -29px;
-  margin-left: 470px;
+  right: 6px;
   position: absolute;
   background-color: rgb(82, 82, 82);
   border-width: 1px;
